--- a/calendar-marks-planner.tex
+++ b/calendar-marks-planner.tex
@@ -1,10 +1,12 @@
 
 \SetCalendarMarks{1}{%
+% Ajahn Chah Memorial Day
 \draw[textbody] node [above right=\markNormalAbove{} and \markNormalRight{} of cal01-\theCalendarYear-01-16.north east] {\sn{1}};
 }
 
 \SetCalendarMarks{2}{%
-\draw[gold] node [above right=\markMoonAbove{} and \markMoonRight{} of cal02-2014-02-14.north east] {\sn{2}};
+% Magha Puja
+\draw[gold] node [above right=\markMoonAbove{} and \markMoonRight{} of cal02-\theCalendarYear-02-03.north east] {\sn{2}};
 }
 
 \SetCalendarMarks{3}{}
@@ -12,16 +14,20 @@
 \SetCalendarMarks{4}{}
 
 \SetCalendarMarks{5}{%
-\draw[gold] node [above right=\markMoonAbove{} and \markMoonRight{} of cal05-2014-05-13.north east] {\sn{3}};
+% Vesakha Puja
+\draw[gold] node [above right=\markMoonAbove{} and \markMoonRight{} of cal05-\theCalendarYear-05-04.north east] {\sn{3}};
 }
 
 \SetCalendarMarks{6}{%
-\draw[textbody] node [above right=\markNormalAbove{} and \markNormalRight{} of cal06-2014-06-17.north east] {\sn{4}};
+% Ajahn Chah's birthday
+\draw[textbody] node [above right=\markNormalAbove{} and \markNormalRight{} of cal06-\theCalendarYear-06-17.north east] {\sn{4}};
 }
 
 \SetCalendarMarks{7}{%
-\draw[gold] node [above right=\markMoonAbove{} and \markMoonRight{} of cal07-2014-07-11.north east] {\sn{5}};
-\draw[textbody] node [above right=\markNormalAbove{} and \markNormalRight{} of cal07-2014-07-12.north east] {\sn{6}};
+% Asalha Puja
+\draw[gold] node [above right=\markMoonAbove{} and \markMoonRight{} of cal07-\theCalendarYear-07-02.north east] {\sn{5}};
+% Vassa begins
+\draw[textbody] node [above right=\markNormalAbove{} and \markNormalRight{} of cal07-\theCalendarYear-07-03.north east] {\sn{6}};
 }
 
 \SetCalendarMarks{8}{}
@@ -29,7 +35,8 @@
 \SetCalendarMarks{9}{}
 
 \SetCalendarMarks{10}{%
-\draw[gold] node [above right=\markMoonAbove{} and \markMoonRight{} of cal10-2014-10-08.north east] {\sn{7}};
+% Pavarana day
+\draw[gold] node [above right=\markMoonAbove{} and \markMoonRight{} of cal10-\theCalendarYear-10-08.north east] {\sn{7}};
 }
 
 \SetCalendarMarks{11}{}
