--- a/calendar-marks.tex
+++ b/calendar-marks.tex
@@ -1,10 +1,12 @@
 
 \SetCalendarMarks{1}{%
+% Ajahn Chah Memorial Day
 \draw[textbody] node [above right=\markNormalAbove{} and \markNormalRight{} of cal01-\theCalendarYear-01-16.north east] {*};
 }
 
 \SetCalendarMarks{2}{%
-\draw[gold] node [above right=\markMoonAbove{} and \markMoonRight{} of cal02-2014-02-14.north east] {*};
+% Magha Puja
+\draw[gold] node [above right=\markMoonAbove{} and \markMoonRight{} of cal02-\theCalendarYear-02-03.north east] {*};
 }
 
 \SetCalendarMarks{3}{}
@@ -12,19 +14,23 @@
 \SetCalendarMarks{4}{}
 
 \SetCalendarMarks{5}{%
-\draw[gold] node [above right=\markMoonAbove{} and \markMoonRight{} of cal05-2014-05-13.north east] {*};
+% Vesakha Puja
+\draw[gold] node [above right=\markMoonAbove{} and \markMoonRight{} of cal05-\theCalendarYear-05-04.north east] {*};
 }
 
 \SetCalendarMarks{6}{%
-\draw[textbody] node [above right=\markNormalAbove{} and \markNormalRight{} of cal06-2014-06-17.north east] {*};
+% Ajahn Chah's birthday
+\draw[textbody] node [above right=\markNormalAbove{} and \markNormalRight{} of cal06-\theCalendarYear-06-17.north east] {*};
 }
 
 \SetCalendarMarks{7}{%
-\draw[gold] node [above right=\markMoonAbove{} and \markMoonRight{} of cal07-2014-07-11.north east] {*};
+% Asalha Puja
+\draw[gold] node [above right=\markMoonAbove{} and \markMoonRight{} of cal07-\theCalendarYear-07-02.north east] {*};
+% Vassa begins
 \node[kite, draw, textbody, fill=textbody,
     scale=0.2,
     kite vertex angles=60,
-    above right=\markKiteAbove{} and \markKiteRight{} of cal07-2014-07-12.north east] {};
+    above right=\markKiteAbove{} and \markKiteRight{} of cal07-\theCalendarYear-07-03.north east] {};
 }
 
 \SetCalendarMarks{8}{}
@@ -32,7 +38,8 @@
 \SetCalendarMarks{9}{}
 
 \SetCalendarMarks{10}{%
-\draw[gold] node [above right=\markMoonAbove{} and \markMoonRight{} of cal10-2014-10-08.north east] {*};
+% Pavarana day
+\draw[gold] node [above right=\markMoonAbove{} and \markMoonRight{} of cal10-\theCalendarYear-10-08.north east] {*};
 }
 
 \SetCalendarMarks{11}{}
