--- a/english-text.tex
+++ b/english-text.tex
@@ -87,18 +87,18 @@ and are not always on the same day as the astronomical occurrences.
 
 {\large THE MAJOR FULL MOON DAYS FOR \theCalendarYear\ / \theCalendarAltYear}
 
-\emph{Māgha Pūjā} \spacedcdot\ 14 February (`Sangha Day')\\
+\emph{Māgha Pūjā} \spacedcdot\ XX February (`Sangha Day')\\
 Commemorates the spontaneous gathering of 1250 arahants to whom\\
 the Buddha gave an exhortation on the basis of the Discipline (\emph{Ovāda Pāṭimokkha}).
 
-\emph{Vesākha Pūjā} \spacedcdot\ 13 May (`Buddha Day')\\
+\emph{Vesākha Pūjā} \spacedcdot\ XX May (`Buddha Day')\\
 Commemorates the birth, enlightenment and passing away of the Buddha.
 
-\emph{Āsāḷhā Pūjā} \spacedcdot\ 11 July (`Dhamma Day')\\
+\emph{Āsāḷhā Pūjā} \spacedcdot\ XX July (`Dhamma Day')\\
 Commemorates the Buddha's first discourse, given to the five \emph{samaṇas} in the Deer Park at\\
 Sarnath, near Varanasi. The traditional Rainy-Season Retreat (\emph{Vassa}) begins on the next day.
 
-\emph{Pavāraṇā Day} \spacedcdot\ 8 October\\
+\emph{Pavāraṇā Day} \spacedcdot\ XX October\\
 This marks the end of the three-month \emph{Vassa} retreat. During the following month,\\
 lay people may offer the \emph{Kaṭhina} robe as part of a general alms-giving ceremony.
 
