--- a/photos.tex
+++ b/photos.tex
@@ -1,49 +1,51 @@
 
+% trim=left bottom right top
+
 \SetPhoto{1}{%
-\includegraphics[keepaspectratio, height=\thePhotoHeight, clip, trim=0 6mm 0 0]{January.pdf}
+\includegraphics[keepaspectratio, height=\thePhotoHeight, clip, trim=0 0 0 0]{January.pdf}
 }
 
 \SetPhoto{2}{%
-\includegraphics[keepaspectratio, height=\thePhotoHeight, clip, trim=0 0 0 15mm]{February.pdf}
+\includegraphics[keepaspectratio, height=\thePhotoHeight, clip, trim=0 0 0 0]{February.pdf}
 }
 
 \SetPhoto{3}{%
-\includegraphics[keepaspectratio, height=\thePhotoHeight, clip, trim=5mm 5mm 0 5mm]{March.pdf}
+\includegraphics[keepaspectratio, height=\thePhotoHeight, clip, trim=0 0 0 0]{March.pdf}
 }
 
 \SetPhoto{4}{%
-\includegraphics[keepaspectratio, height=\thePhotoHeight, clip, trim=28mm 0 0 0]{April.pdf}
+\includegraphics[keepaspectratio, height=\thePhotoHeight, clip, trim=0 0 0 0]{April.pdf}
 }
 
 \SetPhoto{5}{%
-\includegraphics[keepaspectratio, height=\thePhotoHeight, clip, trim=2mm 3mm 2mm 10mm]{May.pdf}
+\includegraphics[keepaspectratio, height=\thePhotoHeight, clip, trim=0 0 0 0]{May.pdf}
 }
 
 \SetPhoto{6}{%
-\includegraphics[keepaspectratio, height=\thePhotoHeight, clip, trim=2mm 5mm 4mm 10mm]{June.pdf}
+\includegraphics[keepaspectratio, height=\thePhotoHeight, clip, trim=0 0 0 0]{June.pdf}
 }
 
 \SetPhoto{7}{%
-\includegraphics[keepaspectratio, height=\thePhotoHeight, clip, trim=38mm 0 0 0]{July.pdf}
+\includegraphics[keepaspectratio, height=\thePhotoHeight, clip, trim=0 0 0 0]{July.pdf}
 }
 
 \SetPhoto{8}{%
-\includegraphics[keepaspectratio, height=\thePhotoHeight, clip, trim=27mm 0 12mm 0]{August.pdf}
+\includegraphics[keepaspectratio, height=\thePhotoHeight, clip, trim=0 0 0 0]{August.pdf}
 }
 
 \SetPhoto{9}{%
-\includegraphics[keepaspectratio, height=\thePhotoHeight, clip, trim=40mm 0 3mm 0]{September.pdf}
+\includegraphics[keepaspectratio, height=\thePhotoHeight, clip, trim=0 0 0 0]{September.pdf}
 }
 
 \SetPhoto{10}{%
-\includegraphics[keepaspectratio, height=\thePhotoHeight, clip, trim=8mm 0 9mm 0]{October.pdf}
+\includegraphics[keepaspectratio, height=\thePhotoHeight, clip, trim=0 0 0 0]{October.pdf}
 }
 
 \SetPhoto{11}{%
-\includegraphics[keepaspectratio, height=\thePhotoHeight, clip, trim=2mm 0 3mm 10mm]{November.pdf}
+\includegraphics[keepaspectratio, height=\thePhotoHeight, clip, trim=0 0 0 0]{November.pdf}
 }
 
 \SetPhoto{12}{%
-\includegraphics[keepaspectratio, height=\thePhotoHeight, clip, trim=5mm 0 5mm 0]{December.pdf}
+\includegraphics[keepaspectratio, height=\thePhotoHeight, clip, trim=0 0 0 0]{December.pdf}
 }
 
