--- a/wall_main.tex
+++ b/wall_main.tex
@@ -20,9 +20,9 @@
 
 \makeatletter
 
-%\graphicspath{{./src-images/300dpi/}}
-%\graphicspath{{./src-images/72dpi/}}
-\graphicspath{{./src-images/30dpi/}}
+%\newcommand\photosDir{./src-images/300dpi/}
+%\newcommand\photosDir{./src-images/72dpi/}
+\newcommand\photosDir{./src-images/30dpi/}
 
 \usepackage{calendar-layout}
 
@@ -52,6 +52,9 @@
 
 \monthMarkPositions
 \TwelveMonths
+
+% Test individual month pages:
+%\MonthPage{01}
 
 % === Year Planner ====================================================
 
