--- a/calendar-layout.sty
+++ b/calendar-layout.sty
@@ -4,25 +4,70 @@
 
 \renewcommand\ifDateNewMoon{%
   \ifdate{
-    equals=2015-01-20, equals=2015-02-18, equals=2015-03-20, equals=2015-04-18, equals=2015-05-18, equals=2015-06-16, equals=2015-07-16, equals=2015-08-14, equals=2015-09-13, equals=2015-10-13, equals=2015-11-11, equals=2015-12-11
+    equals=2015-01-19,
+    equals=2015-02-17,
+    equals=2015-03-19,
+    equals=2015-04-17,
+    equals=2015-05-17,
+    equals=2015-06-15,
+    equals=2015-07-15,
+    equals=2015-08-13,
+    equals=2015-09-12,
+    equals=2015-10-11,
+    equals=2015-11-10,
+    equals=2015-12-09
   }{\putMoon{1}}{};%
 }
 
 \renewcommand\ifDateWaxingMoon{%
   \ifdate{
-    equals=2015-01-27, equals=2015-02-25, equals=2015-03-27, equals=2015-04-25, equals=2015-05-25, equals=2015-06-24, equals=2015-07-24, equals=2015-08-22, equals=2015-09-21, equals=2015-10-20, equals=2015-11-19, equals=2015-12-18
+    equals=2015-01-27,
+    equals=2015-02-25,
+    equals=2015-03-27,
+    equals=2015-04-25,
+    equals=2015-05-25,
+    equals=2015-06-23,
+    equals=2015-07-23,
+    equals=2015-08-21,
+    equals=2015-09-20,
+    equals=2015-10-19,
+    equals=2015-11-18,
+    equals=2015-12-17
   }{\putMoon{2}}{};%
 }
 
 \renewcommand\ifDateFullMoon{%
   \ifdate{
-    equals=2015-02-03, equals=2015-03-05, equals=2015-04-04, equals=2015-05-04, equals=2015-06-02, equals=2015-07-02, equals=2015-07-31, equals=2015-08-29, equals=2015-09-28, equals=2015-10-27, equals=2015-11-25, equals=2015-12-25
+    equals=2015-01-04,
+    equals=2015-02-03,
+    equals=2015-03-04,% Magha
+    equals=2015-04-03,
+    equals=2015-05-02,
+    equals=2015-06-01,% Vesakha
+    equals=2015-06-30,
+    equals=2015-07-30,% Asalha
+    equals=2015-08-28,
+    equals=2015-09-27,
+    equals=2015-10-26,% Pavarana
+    equals=2015-11-25,
+    equals=2015-12-24
   }{\putMoon{3}}{};%
 }
 
 \renewcommand\ifDateWaningMoon{%
   \ifdate{
-    equals=2015-02-12, equals=2015-03-13, equals=2015-04-12, equals=2015-05-11, equals=2015-06-09, equals=2015-07-08, equals=2015-08-07, equals=2015-09-05, equals=2015-10-04, equals=2015-11-03, equals=2015-12-03
+    equals=2015-01-12,
+    equals=2015-02-11,
+    equals=2015-03-12,
+    equals=2015-04-11,
+    equals=2015-05-10,
+    equals=2015-06-09,
+    equals=2015-07-08,
+    equals=2015-08-07,
+    equals=2015-09-05,
+    equals=2015-10-05,
+    equals=2015-11-03,
+    equals=2015-12-03
   }{\putMoon{4}}{};%
 }
 
