default images and lorem ipsum

--- a/calendar-layout.sty
+++ b/calendar-layout.sty
@@ -2,72 +2,74 @@
 
 % Define Moondays
 
+% TODO: Replace with Thai Moons! These are astronomical dates.
 \renewcommand\ifDateNewMoon{%
   \ifdate{
-    equals=2015-01-19,
-    equals=2015-02-17,
-    equals=2015-03-19,
-    equals=2015-04-17,
-    equals=2015-05-17,
-    equals=2015-06-15,
-    equals=2015-07-15,
-    equals=2015-08-13,
-    equals=2015-09-12,
-    equals=2015-10-11,
-    equals=2015-11-10,
-    equals=2015-12-09
+    equals=2016-01-10,
+    equals=2016-02-08,
+    equals=2016-03-09,
+    equals=2016-04-07,
+    equals=2016-05-06,
+    equals=2016-06-05,
+    equals=2016-07-04,
+    equals=2016-08-02,
+    equals=2016-09-01,
+    equals=2016-10-01,
+    equals=2016-10-30,
+    equals=2016-11-29,
+    equals=2016-12-29
   }{\putMoon{1}}{};%
 }
 
 \renewcommand\ifDateWaxingMoon{%
   \ifdate{
-    equals=2015-01-27,
-    equals=2015-02-25,
-    equals=2015-03-27,
-    equals=2015-04-25,
-    equals=2015-05-25,
-    equals=2015-06-23,
-    equals=2015-07-23,
-    equals=2015-08-21,
-    equals=2015-09-20,
-    equals=2015-10-19,
-    equals=2015-11-18,
-    equals=2015-12-17
+    equals=2016-01-16,
+    equals=2016-02-15,
+    equals=2016-03-15,
+    equals=2016-04-14,
+    equals=2016-05-13,
+    equals=2016-06-12,
+    equals=2016-07-12,
+    equals=2016-08-10,
+    equals=2016-09-09,
+    equals=2016-10-09,
+    equals=2016-11-07,
+    equals=2016-12-07
   }{\putMoon{2}}{};%
 }
 
 \renewcommand\ifDateFullMoon{%
   \ifdate{
-    equals=2015-01-04,
-    equals=2015-02-03,
-    equals=2015-03-04,% Magha
-    equals=2015-04-03,
-    equals=2015-05-02,
-    equals=2015-06-01,% Vesakha
-    equals=2015-06-30,
-    equals=2015-07-30,% Asalha
-    equals=2015-08-28,
-    equals=2015-09-27,
-    equals=2015-10-26,% Pavarana
-    equals=2015-11-25,
-    equals=2015-12-24
+    equals=2016-01-24,
+    equals=2016-02-22,
+    equals=2016-03-23,
+    equals=2016-04-22,
+    equals=2016-05-21,
+    equals=2016-06-20,
+    equals=2016-07-19,
+    equals=2016-08-18,
+    equals=2016-09-16,
+    equals=2016-10-16,
+    equals=2016-11-14,
+    equals=2016-12-14
   }{\putMoon{3}}{};%
 }
 
 \renewcommand\ifDateWaningMoon{%
   \ifdate{
-    equals=2015-01-12,
-    equals=2015-02-11,
-    equals=2015-03-12,
-    equals=2015-04-11,
-    equals=2015-05-10,
-    equals=2015-06-09,
-    equals=2015-07-08,
-    equals=2015-08-07,
-    equals=2015-09-05,
-    equals=2015-10-05,
-    equals=2015-11-03,
-    equals=2015-12-03
+    equals=2016-01-02,
+    equals=2016-02-01,
+    equals=2016-03-01,
+    equals=2016-03-31,
+    equals=2016-04-30,
+    equals=2016-05-29,
+    equals=2016-06-27,
+    equals=2016-07-26,
+    equals=2016-08-25,
+    equals=2016-09-23,
+    equals=2016-10-22,
+    equals=2016-11-21,
+    equals=2016-12-21
   }{\putMoon{4}}{};%
 }
 
