--- a/english-text.tex
+++ b/english-text.tex
@@ -50,10 +50,15 @@
 This calendar has been sponsored for free distribution\\
 by the Kataññnutā group of Malaysia, Singapore and Australia.
 
+% TODO: Add credits
 Anumodanā to the many friends who have offered their photographs for this \theCalendarYear\ calendar,\\
-in particular: Montri Sirithampiti (Apr., Nov.), Simone Anzini (cover, Jun., Aug.),\\
-Boonchan Chanloung (Sep.), Andrew Binkley (Dec.), Chinch Gryniewicz (Feb.),\\
-Gary Morrison (Oct.).
+in particular:
+Person~Name (Apr., Nov.),
+Person~Name (cover, Jun., Aug.),
+Person~Name (Sep.),
+Person~Name (Dec.),
+Person~Name (Feb.),
+Person~Name (Oct.).
 
 Monthly Dhamma quotes are adapted from translated teachings contained in\\
 \emph{The Collected Teachings of Ajahn Chah}, available for download at the links below.
@@ -87,17 +92,21 @@ and are not always on the same day as the astronomical occurrences.
 
 {\large THE MAJOR FULL MOON DAYS FOR \theCalendarYear\ / \theCalendarAltYear}
 
+% TODO: Add date
 \emph{Māgha Pūjā} \spacedcdot\ XX February (`Sangha Day')\\
 Commemorates the spontaneous gathering of 1250 arahants to whom\\
 the Buddha gave an exhortation on the basis of the Discipline (\emph{Ovāda Pāṭimokkha}).
 
+% TODO: Add date
 \emph{Vesākha Pūjā} \spacedcdot\ XX May (`Buddha Day')\\
 Commemorates the birth, enlightenment and passing away of the Buddha.
 
+% TODO: Add date
 \emph{Āsāḷhā Pūjā} \spacedcdot\ XX July (`Dhamma Day')\\
 Commemorates the Buddha's first discourse, given to the five \emph{samaṇas} in the Deer Park at\\
 Sarnath, near Varanasi. The traditional Rainy-Season Retreat (\emph{Vassa}) begins on the next day.
 
+% TODO: Add date
 \emph{Pavāraṇā Day} \spacedcdot\ XX October\\
 This marks the end of the three-month \emph{Vassa} retreat. During the following month,\\
 lay people may offer the \emph{Kaṭhina} robe as part of a general alms-giving ceremony.
@@ -107,6 +116,7 @@ lay people may offer the \emph{Kaṭhina} robe as part of a general alms-giving 
 www.forestsangha.org\\
 www.forestsanghapublications.org
 
+% TODO: Copyright date is \theCalendarYear - 1
 Calendar production by Aruno Publications,\\
 Aruna Ratanagiri Buddhist Monastery, UK\\
 \copyright\ Aruno Publications \the\year\\
@@ -124,71 +134,85 @@ www.ratanagiri.org.uk
 
 \renewcommand\SetAllQuotes{%
 
+% TODO: add quote
 \SetQuoteText{1}{%
-The essence of Buddhism is peace, and that peace arises\\
-from truly knowing the nature of all things.
+Lorem ipsum dolor sit amet, consectetuer\\
+adipiscing elit. Ut purus elit, vestibulum ut, placerat ac,\\
+adipiscing vitae, felis. Curabitur dictum gravida mauris.
 }
 
+% TODO: add quote
 \SetQuoteText{2}{%
-Once we are free, whatever our situation may be,\\
-we won't have to suffer. If we have children, we won't have to suffer.\\
-If we work, we won't have to suffer.
+Lorem ipsum dolor sit amet, consectetuer\\
+adipiscing elit. Ut purus elit, vestibulum ut, placerat ac,\\
+adipiscing vitae, felis. Curabitur dictum gravida mauris.
 }
 
+% TODO: add quote
 \SetQuoteText{3}{%
-Practising generosity cleanses our hearts of selfishness;\\
-our mind grows in compassion and caring towards all living beings.
+Nam arcu libero, nonummy eget, consectetuer id, vulputate a, magna.\\
+Donec vehicula augue eu neque. Pellentesque habitant morbi tristique\\
+senectus et netus et malesuada fames ac turpis egestas.
 }
 
+% TODO: add quote
 \SetQuoteText{4}{%
-There is one essential point that all good practice must eventually come to,\\
-and that is not clinging. In the end,\\
-all teachings and teachers must be let go of.
+Mauris ut leo. Cras viverra metus rhoncus sem.\\
+Nulla et lectus vestibulum urna fringilla ultrices.
 }
 
+% TODO: add quote
 \SetQuoteText{5}{%
-Everything you use in this life is support for the practice.\\
-If your dwelling place is an utter mess then your mind will be the same.
+Integer sapien est, iaculis in, pretium quis, viverra ac, nunc.\\
+Praesent eget sem vel leo ultrices bibendum. Aenean faucibus.
 }
 
+% TODO: add quote
 \SetQuoteText{6}{%
-We are taught first to abandon evil and establish that which is good.\\
-Then we must transcend good and evil.
+Morbi dolor nulla, malesuada eu, pulvinar at, mollis ac, nulla.\\
+Curabitur auctor semper nulla. Donec varius orci eget risus.\\
+Duis nibh mi, congue eu, accumsan eleifend, sagittis quis, diam.
 }
 
+% TODO: add quote
 \SetQuoteText{7}{%
-Walking the path, don’t be careless. Even if you are right, don't be careless.\\
-If you are wrong, don't be careless.
+Duis eget orci sit amet orci dignissim rutrum.\\
+Nam dui ligula, fringilla a, euismod sodales, sollicitudin vel, wisi.\\
+Morbi auctor lorem non justo.
 }
 
+% TODO: add quote
 \SetQuoteText{8}{%
-This is the way practice should proceed:\\
-firstly, we need to be upright and honest; secondly, to be wary of wrongdoing;\\
-and thirdly, to have a heart imbued with humility.
+Nam lacus libero, pretium at, lobortis vitae, ultricies et, tellus.\\
+Donec aliquet, tortor sed accumsan bibendum, erat ligula aliquet magna,\\
+vitae ornare odio metus a mi. Morbi ac orci et nisl hendrerit mollis.
 }
 
+% TODO: add quote
 \SetQuoteText{9}{%
-Dhamma practice means upholding virtue, developing samādhi and\\
-cultivating wisdom in our hearts. Reflect on the Triple Gem.\\
-Strive on with sincerity.
+Suspendisse ut massa.\\
+Cras nec ante.\\
+Pellentesque a nulla.
 }
 
+% TODO: add quote
 \SetQuoteText{10}{%
-Whatever virtues have been cultivated are imperfect if lacking in mindfulness.\\
-Mindfulness is life. It is a cause for the arising\\
-of self-awareness and wisdom.
+Cum sociis natoque penatibus et magnis dis parturient montes,\\
+nascetur ridiculus mus. Aliquam tincidunt urna.\\
+Nulla ullamcorper vestibulum turpis.
 }
 
+% TODO: add quote
 \SetQuoteText{11}{%
-Birth, ageing, illness, and death: these are universal truths.\\
-See this clearly, acknowledge these facts\\
-and you will be able to let go.
+Pellentesque cursus luctus mauris. Nulla malesuada porttitor diam.\\
+Donec felis erat, congue non, volutpat at, tincidunt tristique, libero.
 }
 
+% TODO: add quote
 \SetQuoteText{12}{%
-After awakening, the Buddha and his disciples still maintained their practice.\\
-Effort was their way, their natural habit. I think we should take\\
-their example as a model for our practice.
+Vivamus viverra fermentum felis. Donec nonummy pellentesque ante.\\
+Phasellus adipiscing semper elit. Proin fermentum massa ac quam.\\
+Sed diam turpis, molestie vitae, placerat a, molestie nec, leo.
 }
 
 }% \SetAllQuotes
@@ -199,52 +223,64 @@ their example as a model for our practice.
 
 \renewcommand\SetAllPhotoCaptions{%
 
+% TODO: add caption
 \SetPhotoCaption{1}{%
-Lake Tahoe, USA
+Vivamus viverra fermentum felis
 }
 
+% TODO: add caption
 \SetPhotoCaption{2}{%
-Luang Por Sumedho giving a baby blessing, Wat Aruna Ratanagiri, UK
+Donec nonummy pellentesque ante
 }
 
+% TODO: add caption
 \SetPhotoCaption{3}{%
-Ajahn Ñāṇarato, Nara Park, Japan
+Phasellus adipiscing semper elit
 }
 
+% TODO: add caption
 \SetPhotoCaption{4}{%
-Ajahn Candasiri on alms-round (\textit{piṇḍapāta}), while visiting Wat Nanachat, Thailand
+Proin fermentum massa ac quam
 }
 
+% TODO: add caption
 \SetPhotoCaption{5}{%
-Ajahn Gavesako doing \textit{kuṭī} maintenance, Wat Cittaviveka, UK
+Sed diam turpis, molestie vitae, placerat a, molestie nec, leo
 }
 
+% TODO: add caption
 \SetPhotoCaption{6}{%
-Sāmaṇera Kovido receiving his alms-bowl during \textit{upasampadā}, Wat Santacittarama, Italy
+Maecenas lacinia
 }
 
+% TODO: add caption
 \SetPhotoCaption{7}{%
-Ajahn Khemasiri and friends, near Wat Dhammapala, Switzerland
+Nam ipsum ligula, eleifend at, accumsan nec, suscipit a, ipsum
 }
 
+% TODO: add caption
 \SetPhotoCaption{8}{%
-Luang Por Boonchoo receiving offerings from Ajahn Chandapālo, Wat Santacittarama, Italy
+Morbi blandit ligula feugiat magna
 }
 
+% TODO: add caption
 \SetPhotoCaption{9}{%
-Luang Por Ṭiradhammo on alms-round (\textit{piṇḍapāta}), Santaloka Hermitage, Italy
+Nunc eleifend consequat lorem
 }
 
+% TODO: add caption
 \SetPhotoCaption{10}{%
-Kathina 2012, Wat Amaravati, UK
+Sed lacinia nulla vitae enim
 }
 
+% TODO: add caption
 \SetPhotoCaption{11}{%
-Funeral process for Luang Por, Tan Chao Khun Mahamon
+Pellentesque tincidunt purus vel magna
 }
 
+% TODO: add caption
 \SetPhotoCaption{12}{%
-Viewing rock carving, Thailand
+Integer non enim
 }
 
 }% \SetAllPhotoCaptions
